--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,12 @@
 nav {
   background-color: darkblue;
-  padding : 10px
+  padding : 20px
 }
 
 nav a {
   color: white;
   display: block;
-  padding: 20px;
+  padding: 10px;
 }
 
 h1 {
@@ -22,7 +22,41 @@ img {
 }
 
 p {
+  padding: 0;
+}
+
+main {
+  max-width: 840px;
+}
+
+aside {
+  width: 20em;
+  margin: 1em;
+  border: 1px solid rgb(0, 0, 0, 0.2); /*  */
+  padding: 1em;
+  background-color: #eee;
+  color: #333;
+  text-align: center;
+}
+
+aside img {
+  width: 200px;
+  height: auto;
+}
+
+main img {
+  width: 200px;
+  height: auto;
+}
+
+p {
   padding: 10px;
+}
+
+footer {
+  margin-top: 1em;
+  border-top: 1px solid #000;
+  text-align: center;
 }
 
 
