--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,21 +13,20 @@ h1 {
   color: darkblue;
 }
 
-img {
-  width: 150px;
+
+main {
+  max-width: 840px;
+  margin: 0 auto;
+}
+
+ main img {
+  width: 200px;
   height: auto;
   border: 1px solid black;
   padding: 2px;
   box-shadow: 0 0 30px gray;
 }
 
-p {
-  padding: 0;
-}
-
-main {
-  max-width: 840px;
-}
 
 aside {
   width: 20em;
@@ -44,10 +43,6 @@ aside img {
   height: auto;
 }
 
-main img {
-  width: 200px;
-  height: auto;
-}
 
 p {
   padding: 10px;
