--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,13 +39,15 @@ aside {
 }
 
 aside img {
-  width: 200px;
+  width: 250px;
   height: auto;
+  box-shadow: 0 0 30px gray;
+
 }
 
 
 p {
-  padding: 10px;
+  padding: 0;
 }
 
 footer {
