--- a/week03/styles/float.css
+++ b/week03/styles/float.css
@@ -20,7 +20,10 @@ p {
 footer {
     border-top: 1px solid #555;
     padding-top: 5px;
+    clear: both;
     /* Remove the comment below and observe the results. */
 
     /* clear: both; */
 }
+
+/* this is a comment, yay! */
