--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,10 +5,16 @@
   --shadow-color: gray;
   --aside-bg: #eee;
   --aside-text: #333;
-  --max-width: 840px;
-  --img-width: 200px;
+  --max-width: 600px;
+  --img-width: 150px;
 }
 
+* {
+  margin-top: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
 
 nav {
   background-color: var(--primary-color);
@@ -37,6 +43,9 @@ main img {
   border: 1px solid var(--border-color);
   padding: 2px;
   box-shadow: 0 0 30px var(--shadow-color);
+  float: right;
+  margin: 0 0 1rem 1rem;
+
 }
 
 
@@ -44,19 +53,27 @@ aside {
   width: 20em;
   margin: 1em;
   border: 1px solid rgb(0, 0, 0, 0.2);
-  /*  */
   padding: 1em;
   background-color: var(--aside-bg);
   color: var(--aside-text);
   text-align: center;
+  position: relative;
 }
 
 aside img {
   width: var(--img-width);
   height: auto;
 
+
+
 }
 
+aside h2 {
+  position: absolute;
+  top: 0px;
+  left: 130px;
+
+}
 
 p {
   padding: 0;
@@ -66,4 +83,13 @@ footer {
   margin-top: 1em;
   border-top: 1px solid var(--border-color);
   text-align: center;
+}
+
+/* Class Selectors */
+.box {
+  margin: 1rem;
+  border: 1px solid rgb(0, 0, 0, 10%);
+  padding: 1rem;
+  background: #ddd;
+  color: #000;
 }
