--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,7 +1,7 @@
 :root {
-  --secondary-color: #2E8B57;
+  /* --secondary-color: #2E8B57; */
   /* saddle brown */
-  --primary-color: #372C2E;
+  /* --primary-color: #372C2E; */
 
   /* sea green */
   --white-color: #ffffff;
@@ -40,9 +40,8 @@ header,
 main,
 footer {
   width: 100%;
-  margin: 50 auto;
+  margin: 0px auto;
   padding: 0;
-  max-width: 840;
 
 }
 
