--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -51,7 +51,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
+  background-color: var(--accent1-color);
 
 
 }
