--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,31 +19,44 @@
 body {
   font-size: 16px;
   font-family: Roboto, Arial, sans-serif;
+
 }
+
 
 nav {
   background-color: var(--primary-color);
-  padding: 10px
+  padding: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
 }
 
 nav a {
   color: var(--text-light);
   display: block;
   padding: 10px;
+  padding: 0.5rem;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 
 h1 {
   color: var(--primary-color);
+  text-decoration: underline 1px var(--border-color);
 }
 
 aside {
   position: relative;
-  width: 20rem;
+  width: 20em;
   text-align: center;
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
 
 p {
-  margin: 1rem;
+  margin: 0.5%;
 }
 
 aside h2 {
@@ -67,21 +80,30 @@ main img {
   padding: 2px;
   box-shadow: 0 0 30px var(--shadow-color);
   float: right;
+  margin: 1rem;
 }
 
 main {
   max-width: var(--max-width);
   margin: 0 auto;
+  grid-column: 2/3;
 }
 
 p {
-  padding: 0;
+  padding: 1rem;
 }
 
 footer {
   margin-top: 1em;
   border-top: 1px solid var(--border-color);
   text-align: center;
+}
+
+header,
+.grid,
+footer {
+  max-width: 840px;
+  margin: 0 auto;
 }
 
 /* Class Selectors */
@@ -94,5 +116,10 @@ footer {
 }
 
 .indent {
-  padding: 2rem;
+  padding: 1rem;
+}
+
+.grid {
+  display: grid;
+  align-items: center;
 }
