--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,7 +44,7 @@ nav a {
 
 h1 {
   color: var(--primary-color);
-  text-decoration: underline 1px var(--border-color);
+  border-bottom: 1px solid var(--border-color)
 }
 
 aside {
