--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -106,7 +106,7 @@ header nav {
 
 h1 {
   position: absolute;
-  /* top: 20px; */
+  top: 80px;
   width: 100%;
   padding: 16px;
   text-align: center;
