--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -4,7 +4,7 @@
   /* white */
   --accent1-color: #03090c;
   /* sky blue */
-  --accent2-color: #8f5100;
+  --accent2-color: #cb7504;
   /* golden orange */
   --heading-font: "Times New Roman", "Georgia", serif;
   --body-font: Arial, Helvetica, sans-serif;
